# JsonExplorer

./: README.md  json_explorer.py  pyproject.toml  setup.py
json_explorer/: __main__.py  explorer.py  json_explorer.py
