[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "json_explorer"
description = "TUI JSON explorer"
version = "0.0.1"
readme = {file = "README.txt", content-type = "text/markdown"}
authors = [{name = "David Schmidt", email = "davidschmidtp@gmail.com"}]

[project.scripts]
json-explorer = "json_explorer.json_explorer:main"
