[tool.poetry]
name = "json-explorer"
version = "1.0.0"
description = "TUI to explore JSON objects"
license = "MIT"
authors = ["David Schmidt <davidschmidtp@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Sxmple-DavidSchmidt/JsonExplorer"
keywords = ["json"]
packages = [{include = "json_explorer"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
json-explorer = "json_explorer.explorer:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
